--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,8 @@ networkx==3.1
 numba==0.58.1
 numpy==1.24.3
 oauthlib==3.2.2
-opencv-python==4.9.0.80
+# opencv-python==4.9.0.80
+opencv-python-headless
 opt-einsum==3.3.0
 packaging==24.0
 pillow==10.3.0
